# echidna

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile  todo.md  todo.txt  valgrind.txt
cmake/: compile-options.cmake  dependencies.cmake  install-config.cmake  install-rules.cmake  options.cmake  platform.cmake
include/echidna/: adapter.hpp  adapter_options.hpp  bind_group.hpp  bind_group_layout.hpp  buffer.hpp  buffer_descriptor.hpp  callbacks.hpp  chained.hpp  color_attachment.hpp  command_buffer.hpp  command_encoder.hpp  compute_pass_encoder.hpp  compute_pipeline.hpp  convenience.hpp  defaults.hpp  device.hpp  device_descriptor.hpp  echidna.hpp  enums.hpp  handle.hpp  instance.hpp  limits.hpp  macros.hpp  pipeline_layout.hpp  query_set.hpp  queue.hpp  render_bundle.hpp  render_bundle_encoder.hpp  render_pass_encoder.hpp  render_pipeline.hpp  shader.hpp  shader_descriptor.hpp  structs.hpp  surface.hpp  surface_configuration.hpp  surface_descriptor.hpp  texture.hpp  texture_view.hpp  webgpu.hpp
include/echidna/webgpu/: adapter.hpp  bind_group.hpp  bind_group_layout.hpp  buffer.hpp  chained_struct.hpp  command_buffer.hpp  command_encoder.hpp  compute_pass_encoder.hpp  compute_pipeline.hpp  device.hpp  enums.hpp  handle.hpp  instance.hpp  pipeline_layout.hpp  query_set.hpp  queue.hpp  render_bundle.hpp  render_bundle_encoder.hpp  render_pass_encoder.hpp  render_pipeline.hpp  sampler.hpp  shader.hpp  structs.hpp  surface.hpp  surface_descriptor.hpp  texture.hpp  texture_view.hpp
samples/: CMakeLists.txt
samples/phong/: main.cpp
samples/phong/linux/: main.cpp
samples/phong/windows/: main.cpp
samples/triangle/: main.cpp
src/: adapter.cpp  buffer.cpp  command_encoder.cpp  compute_pass_encoder.cpp  compute_pipeline.cpp  device.cpp  enums.cpp  instance.cpp  query_set.cpp  queue.cpp  render_bundle_encoder.cpp  render_pass_encoder.cpp  render_pipeline.cpp  shader.cpp  surface.cpp  texture.cpp
tests/: CMakeLists.txt
tests/src/: adapter_tests.cpp  echidna_test.cpp  echidna_tests.cpp  instance_tests.cpp  utils.hpp
